--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,4 +47,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/loadTerminal" />
 
+    <Button
+        android:id="@+id/downloadToken"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:text="Download Token"
+        android:layout_marginTop="50dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/startPay" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
